[gd_scene load_steps=32 format=3 uid="uid://dokhyh7eo4mwv"]

[ext_resource type="Script" uid="uid://23wrdfc0atd" path="res://scripts/ui/CharacterPreview.gd" id="1_4hx64"]
[ext_resource type="Texture2D" uid="uid://b5gb1wu4vrfhq" path="res://art/textures/GUI_Assets.png" id="2_spspg"]
[ext_resource type="Texture2D" uid="uid://cp5oaeiyh12gx" path="res://art/textures/Alphred_portrait_normal.png" id="3_st0te"]
[ext_resource type="FontFile" uid="uid://ctd5pba6pfiqk" path="res://art/Fonts/Monocraft.ttc" id="4_bxick"]
[ext_resource type="StyleBox" uid="uid://dly7gpxmaudqk" path="res://scenes/userinterface/Invisible_Button.tres" id="4_spspg"]
[ext_resource type="PackedScene" uid="uid://06n4b7bhx05r" path="res://scenes/userinterface/active_effect_scene.tscn" id="6_8i0es"]
[ext_resource type="StyleBox" uid="uid://cv04fi2snp0rd" path="res://scenes/userinterface/CharacterPreviewOCEffectDrawer.tres" id="6_khx38"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5oovn"]
atlas = ExtResource("2_spspg")
region = Rect2(176, 0, 7, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b706j"]
texture = ExtResource("2_spspg")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_len0o"]
texture = ExtResource("2_spspg")
expand_margin_top = 1.0
region_rect = Rect2(208, 16, 10, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_owq5w"]
atlas = ExtResource("2_spspg")
region = Rect2(184, 0, 7, 7)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3pl1b"]
texture = ExtResource("2_spspg")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0
expand_margin_left = 1.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
region_rect = Rect2(32, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w8mwe"]
texture = ExtResource("2_spspg")
expand_margin_top = 1.0
region_rect = Rect2(198, 16, 10, 15)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_st0te"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8i0es"]
load_path = "res://.godot/imported/GUI_Assets.png-fb06711353850da2dfdd4a114970627a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ha13n"]
atlas = SubResource("CompressedTexture2D_8i0es")
region = Rect2(160, 64, 7, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vvpmc"]
texture = SubResource("AtlasTexture_ha13n")
modulate_color = Color(0.6789437, 0.6789437, 0.6789437, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f0dpo"]
load_path = "res://.godot/imported/GUI_Assets.png-fb06711353850da2dfdd4a114970627a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_282ap"]
atlas = SubResource("CompressedTexture2D_f0dpo")
region = Rect2(160, 64, 7, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1nmp8"]
texture = SubResource("AtlasTexture_282ap")
modulate_color = Color(0.6955032, 0.6955031, 0.6955031, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_pvteg"]
load_path = "res://.godot/imported/GUI_Assets.png-fb06711353850da2dfdd4a114970627a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_f6l07"]
atlas = SubResource("CompressedTexture2D_pvteg")
region = Rect2(160, 64, 7, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1hefv"]
texture = SubResource("AtlasTexture_f6l07")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_mbir6"]
load_path = "res://.godot/imported/GUI_Assets.png-fb06711353850da2dfdd4a114970627a.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_xqxqi"]
atlas = SubResource("CompressedTexture2D_mbir6")
region = Rect2(160, 64, 7, 9)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4hkds"]
texture = SubResource("AtlasTexture_xqxqi")

[sub_resource type="AtlasTexture" id="AtlasTexture_khx38"]
atlas = ExtResource("2_spspg")
region = Rect2(177, 67, 3, 2)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i0es"]
atlas = ExtResource("2_spspg")
region = Rect2(224, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvpmc"]
atlas = ExtResource("2_spspg")
region = Rect2(224, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0dpo"]
atlas = ExtResource("2_spspg")
region = Rect2(240, 224, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nmp8"]
atlas = ExtResource("2_spspg")
region = Rect2(240, 240, 16, 16)

[node name="CharacterPreview" type="Control"]
custom_minimum_size = Vector2(0, 46)
layout_mode = 3
anchors_preset = 0
offset_right = 110.0
offset_bottom = 64.235
script = ExtResource("1_4hx64")
metadata/_edit_lock_ = true

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 110.0
offset_bottom = 46.0
size_flags_vertical = 3

[node name="Background" type="NinePatchRect" parent="Control"]
z_index = -3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spspg")
region_rect = Rect2(98, 66, 28, 26)
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 4

[node name="Icon" type="NinePatchRect" parent="Control"]
layout_mode = 1
anchors_preset = -1
offset_left = 7.0
offset_top = 7.0
offset_right = 41.0
offset_bottom = 42.0
grow_vertical = 2
texture = ExtResource("2_spspg")
region_rect = Rect2(132, 4, 24, 24)
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Control/Icon"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.037
anchor_top = 0.036000002
anchor_right = 0.037
anchor_bottom = 0.036000002
offset_left = -0.008000016
offset_top = -0.01000011
offset_right = 31.992
offset_bottom = 33.74
color = Color(1, 1, 1, 0)

[node name="Icon_texture" type="TextureRect" parent="Control/Icon/ColorRect"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
anchors_preset = -1
offset_right = 32.0
offset_bottom = 32.75
texture = ExtResource("3_st0te")
stretch_mode = 2
metadata/_edit_use_anchors_ = true

[node name="CharacterName" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 43.0
offset_top = 8.0
offset_right = 131.0
offset_bottom = 26.0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/line_spacing = -3
theme_override_fonts/font = ExtResource("4_bxick")
theme_override_font_sizes/font_size = 18
text = "Name"
autowrap_mode = 2
max_lines_visible = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 42.0
offset_top = 21.0
offset_right = 85.0
offset_bottom = 39.5
size_flags_horizontal = 3
theme_override_constants/separation = 4
metadata/_edit_group_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Health_Icon" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_5oovn")
stretch_mode = 3

[node name="HealthBar" type="ProgressBar" parent="Control/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxTexture_b706j")
theme_override_styles/fill = SubResource("StyleBoxTexture_len0o")
value = 80.0
show_percentage = false

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6

[node name="Sanity_Icon" type="TextureRect" parent="Control/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = SubResource("AtlasTexture_owq5w")
stretch_mode = 3

[node name="SanityBar" type="ProgressBar" parent="Control/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxTexture_3pl1b")
theme_override_styles/fill = SubResource("StyleBoxTexture_w8mwe")
value = 80.0
show_percentage = false

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 2.75
offset_top = 3.0
offset_right = 108.0
offset_bottom = 47.0
mouse_behavior_recursive = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("4_spspg")
theme_override_styles/pressed = ExtResource("4_spspg")
theme_override_styles/hover = ExtResource("4_spspg")
theme_override_styles/disabled = ExtResource("4_spspg")
theme_override_styles/focus = SubResource("StyleBoxFlat_st0te")
metadata/_edit_lock_ = true

[node name="SelectedUnit" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 113.0
offset_top = 9.0
offset_right = 122.0
offset_bottom = 41.0
texture = ExtResource("2_spspg")
region_rect = Rect2(99, 32, 9, 32)
patch_margin_left = 4
patch_margin_top = 16
patch_margin_right = 5
patch_margin_bottom = 16

[node name="EffectDrawer" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 0
offset_left = 2.0
offset_top = 48.0
offset_right = 108.0
offset_bottom = 64.0

[node name="Background2" type="NinePatchRect" parent="EffectDrawer"]
z_index = -3
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.9999962
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_spspg")
region_rect = Rect2(68, 68, 24, 24)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 4

[node name="EffectHbox" type="HBoxContainer" parent="EffectDrawer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 5.0
offset_right = 102.0
offset_bottom = 13.0
theme_override_constants/separation = 3

[node name="ActiveEffect" parent="EffectDrawer/EffectHbox" instance=ExtResource("6_8i0es")]
visible = false
custom_minimum_size = Vector2(14, 7)
layout_mode = 2

[node name="OC EffectDrawer" type="Button" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 42.0
offset_right = 84.0
offset_bottom = 51.0
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("6_khx38")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vvpmc")
theme_override_styles/hover = SubResource("StyleBoxTexture_1nmp8")
theme_override_styles/disabled = SubResource("StyleBoxTexture_1hefv")
theme_override_styles/focus = SubResource("StyleBoxTexture_4hkds")

[node name="OC_ED_Icon" type="TextureRect" parent="OC EffectDrawer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 3.0
offset_right = -2.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_khx38")

[node name="Movement actions" type="Control" parent="."]
anchors_preset = 0
offset_left = 87.0
offset_top = 7.0
offset_right = 102.0
offset_bottom = 42.0

[node name="NotMoved" type="TextureRect" parent="Movement actions"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = SubResource("AtlasTexture_8i0es")

[node name="NotAction" type="TextureRect" parent="Movement actions"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 16.0
texture = SubResource("AtlasTexture_vvpmc")

[node name="Moved" type="TextureRect" parent="Movement actions"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
tooltip_text = "You have moved"
texture = SubResource("AtlasTexture_f0dpo")

[node name="Action" type="TextureRect" parent="Movement actions"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -16.0
offset_right = 16.0
tooltip_text = "Action used"
texture = SubResource("AtlasTexture_1nmp8")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="OC EffectDrawer" to="." method="_on_oc_effect_drawer_pressed"]
